# NeutronEngine

./: .gitignore  .rgignore  Cargo.toml  README.md
crates/internal/: Cargo.toml
crates/internal/src/: lib.rs
crates/rendering/: Cargo.toml  build.rs
crates/rendering/src/: lib.rs
crates/rendering/src/prelude/: command_pool.rs  debugger.rs  device.rs  fence.rs  image.rs  instance.rs  mod.rs  surface.rs  swapchain.rs
crates/rendering/src/prelude/buffer/: mod.rs  raw_buffer.rs  sub_buffer.rs
crates/rendering/src/prelude/command_buffer/: command_allocator.rs  mod.rs
crates/rendering/src/prelude/descriptors/: layout.rs  mod.rs  pool.rs  sets.rs
crates/rendering/src/prelude/pipeline/: mod.rs
crates/rendering/src/prelude/render_pass/: mod.rs
crates/rendering/src/utils/: ffi.rs  mod.rs
crates/rendering/tests/: create_instances.rs  create_surface.rs
crates/rendering/vulkan_bindings/: CMakeLists.txt
crates/rendering/vulkan_bindings/src/: lib.c
crates/window/: Cargo.toml
crates/window/src/: events.rs  lib.rs
engine/src/: defines.h  test.c
examples/basic_window/: Cargo.toml
examples/basic_window/src/: main.rs
examples/create_window/src/: main.rs
examples/load_renderer/: Cargo.toml
examples/load_renderer/src/: main.rs
neutron-examples/create_window/src/: main.rs
shaders/: main.glsl
src/: lib.rs  main.rs
src/engine/: mod.rs
src/engine/rendering/: device.rs  instance.rs  mod.rs  swapchain.rs
src/engine/rendering/update/: mod.rs  types.rs
src/engine/window/: mod.rs
testbed/src/: main.c
(+2 files in other folders)
