[package]
name = "window"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
glfw = { version = "0.57.0", features = ["wayland"] }
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["libloaderapi"]

[target.'cfg(target_os = "macos")'.dependencies.objc2]
version = "0.5.2"
